test/good/08_erased_identity_type.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let 0 Id : {0 A : U} -> A -> A -> U = \{A} x y. (0 P : A -> U) -> P x -> P y;
let refl : {0 A : U} -> {0 x : A} -> Id x x = \{A} {x} P px. px;

let ok : (0 n : Nat) -> Id n n = \n. refl;

ok
